[package]
name = "vim-tutorial-nvim"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
crossterm = "0.28"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }
